--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
                     {% if post.thumb %}
                     <img src="{{ site.baseurl }}{{ post.thumb }}" style="width:250px;">
                     {% else %}
-                    <img src="{{ site.baseurl }}/assets/images/blank-1157886_1280.jpg" style="width:250px;">
+                    <img src="{{ root_url }}/assets/images/blank-1157886_1280.jpg" style="width:250px;">
                     {% endif %}
                   </div>
               </div>
